<?php
declare(strict_types=1);

namespace Main\Exchange\Procedures\Rules;
/** ***********************************************************************************************
 * Procedures rules main interface
 *
 * @package exchange_exchange_procedures
 * @author  Hvorostenko
 *************************************************************************************************/
interface Rules
{

}